--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,7 @@
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
-
+bin/
 *.iml
 
 ## Directory-based project format:
