remove makefile from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,6 @@ crashlytics-build.properties
 CMakeCache.txt
 CMakeFiles
 CMakeScripts
-Makefile
+#Makefile
 cmake_install.cmake
 install_manifest.txt
