--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required(VERSION 2.8)
 project(time_series_data_reader)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 include_directories(include)
 
@@ -26,5 +27,5 @@ set(SOURCE_FILES_NO_MAIN
         include/time_series.h
         include/parse.h)
 
-add_executable(time_series_data_reader ${SOURCE_FILES})
-add_library(ddj_tsfm STATIC ${SOURCE_FILES_NO_MAIN})
+add_executable(ddj_tsfm_test ${SOURCE_FILES})
+add_library(ddj_tsfm ${SOURCE_FILES_NO_MAIN})
